--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta name="google-site-verification" content="gnjuCzhlUWCwOXt..." />
+    <meta name="google-site-verification" content="FRRN-pB7Kj-Vhe04_PnsaXylsiYkIism3C_HrJCf4GA" />
     <meta
       name="description"
       content="Web site created using create-react-app"
