Fixed some issues

--- a/public/index.html
+++ b/public/index.html
@@ -6,10 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta name="google-site-verification" content="FRRN-pB7Kj-Vhe04_PnsaXylsiYkIism3C_HrJCf4GA" />
-    <meta
-      name="description"
-      content="Web site created using create-react-app"
-    />
+    <meta name="description" content="Noteshare is a free platform to share, browse, and download notes created by students and educators." />
+    <meta name="keywords" content="notes, study material, students, education, share notes, browse notes" />
+    <meta name="google-site-verification" content="FRRN-pB7Kj-Vhe04_PnsaXylsiYkIism3C_HrJCf4GA" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
