--- a/public/index.html
+++ b/public/index.html
@@ -1,43 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <!-- ✅ Canonical link tag with actual URL -->
+    <link rel="canonical" href="https://noteshare1.netlify.app/" />
+
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta name="google-site-verification" content="FRRN-pB7Kj-Vhe04_PnsaXylsiYkIism3C_HrJCf4GA" />
-    <meta name="description" content="Noteshare is a free platform to share, browse, and download notes created by students and educators." />
-    <meta name="keywords" content="notes, study material, students, education, share notes, browse notes" />
-    <meta name="google-site-verification" content="FRRN-pB7Kj-Vhe04_PnsaXylsiYkIism3C_HrJCf4GA" />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-    <!--
-      manifest.json provides metadata used when your web app is installed on a
-      user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
-    -->
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <!--
-      Notice the use of %PUBLIC_URL% in the tags above.
-      It will be replaced with the URL of the `public` folder during the build.
-      Only files inside the `public` folder can be referenced from the HTML.
 
-      Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
-      work correctly both with client-side routing and a non-root public URL.
-      Learn how to configure a non-root public URL by running `npm run build`.
-    -->
-    <title>React App</title>
+    <!-- ✅ Only one Google site verification tag needed -->
+    <meta name="google-site-verification" content="FRRN-pB7Kj-Vhe04_PnsaXylsiYkIism3C_HrJCf4GA" />
+
+    <!-- ✅ Descriptive and keyword-rich content -->
+    <meta name="description" content="Noteshare is a free platform for students and educators to share, browse, and download high-quality study notes and materials." />
+    <meta name="keywords" content="notes, study materials, student notes, educational resources, share notes, browse notes" />
+
+    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+
+    <!-- ✅ Add title for SEO -->
+    <title>Noteshare - Share & Download Student Notes</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
-    <!--
-      This HTML file is a template.
-      If you open it directly in the browser, you will see an empty page.
-
-      You can add webfonts, meta tags, or analytics to this file.
-      The build step will place the bundled scripts into the <body> tag.
-
-      To begin the development, run `npm start` or `yarn start`.
-      To create a production bundle, use `npm run build` or `yarn build`.
-    -->
   </body>
 </html>
