--- a/public/index.html
+++ b/public/index.html
@@ -7,13 +7,26 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
+    <meta
+      name="google-site-verification"
+      content="mUeaa7I4WPgAPWDBnix_flQ6TJ4nUQFxTB4_nwQxbHU"
+    />
 
     <!-- ✅ Only one Google site verification tag needed -->
-    <meta name="google-site-verification" content="FRRN-pB7Kj-Vhe04_PnsaXylsiYkIism3C_HrJCf4GA" />
+    <meta
+      name="google-site-verification"
+      content="FRRN-pB7Kj-Vhe04_PnsaXylsiYkIism3C_HrJCf4GA"
+    />
 
     <!-- ✅ Descriptive and keyword-rich content -->
-    <meta name="description" content="Noteshare is a free platform for students and educators to share, browse, and download high-quality study notes and materials." />
-    <meta name="keywords" content="notes, study materials, student notes, educational resources, share notes, browse notes" />
+    <meta
+      name="description"
+      content="Noteshare is a free platform for students and educators to share, browse, and download high-quality study notes and materials."
+    />
+    <meta
+      name="keywords"
+      content="notes, study materials, student notes, educational resources, share notes, browse notes"
+    />
 
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
