--- a/public/index.html
+++ b/public/index.html
@@ -28,7 +28,7 @@
       content="notes, study materials, student notes, educational resources, share notes, browse notes"
     />
 
-    <link rel="icon" type="image/png" href="../src/images/icon.png" />
+    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
