--- a/public/index.html
+++ b/public/index.html
@@ -33,7 +33,7 @@
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
     <!-- ✅ Add title for SEO -->
-    <title>Noteshare - Download & Share Student Notes | Free Resources</title>
+    <title>Noteshare - CBSE Notes | Class Notes | Pdf | Notes | Download & Share Student Notes | Free Resources</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
